--- a/style.css
+++ b/style.css
@@ -55,6 +55,36 @@ h3 {
     padding-left: 10px;
 }
 
+/*.carte-h3 {
+    font-family: 'raleway', Arial;
+    font-style: normal;
+    font-size: 12px;
+    line-height: 16px;
+    margin: 0;
+    padding-top: 5px;
+    padding-left: 10px;
+}*/
+
+a {
+    text-decoration: none;
+    color: black;
+    font-weight: 400;
+    font-size: 12px;
+    font-style: normal;
+    /*margin: 5px 5px 5px 10px;*/
+}
+
+.carte_populaire_marseille a {
+    text-decoration: none;
+    color: black;
+    font-weight: 400;
+    font-size: 12px;
+    font-style: normal;
+    display: flex;   
+    width: 100%;
+    position: relative;
+}
+
 figure, ul{
     margin: 0;
     padding: 0;
@@ -89,6 +119,7 @@ header nav li {
 header a {
     text-decoration: none;
     color: black;
+    font-size: 16px;
  }
 /* Apparence au survol des liens */
 header nav li:hover {
@@ -292,8 +323,7 @@ background: none;
     display: inline-flex;
     margin-left: 6px; 
     position: absolute;
-    bottom: 5px;
-    left: 5px;
+    bottom: 5%;
   }
 
 .afficher_plus {
@@ -385,20 +415,6 @@ figure, ul {
 footer figure, li {
     font-size: 12px;  
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* Sur tous types d'écran, quand la largeur de la fenêtre est comprise entre 768px et 992px (tablette) */
@@ -696,8 +712,7 @@ footer figure, li {
         display: inline-flex;
         margin-left: 6px; 
         position: absolute;
-        bottom: 5px;
-        left: 5px;
+        bottom: 5%;
       }
     .afficher_plus {
         font-weight: bold;
@@ -791,27 +806,6 @@ footer figure, li {
         font-size: 12px;  
     }    
 }  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* Sur les écrans, quand la largeur de la fenêtre fait au maximum 768px (mobile) */
