Ajout margin pour centrer contenu sur grand écran

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
    margin-left: 40px;
    margin-right: 40px;
    max-width: 1400px;
+   margin: 0 auto;
  }
 body {
     font-family: 'raleway', serif;
